--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "spyke",
   "version": "0.0.1",
+  "description": "spy on your chat partner",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kateray/spyke.git"
+  },
+  "engines": {
+    "node": "0.10.x"
+  },
   "dependencies": {
     "express": "3.4.0",
     "socket.io": "1.0",
